--- a/views/home/index.html
+++ b/views/home/index.html
@@ -58,19 +58,19 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6">
-                    <a href="../avaliacoes/avaliacoes/index.html" class="btn btn-dark w-100 p-3 fw-bold">Avaliações</a>
+                    <a href="../avaliacao/index.html" class="btn btn-dark w-100 p-3 fw-bold">Avaliações</a>
                 </div>
 
                 <div class="col-lg-4 col-md-6">
-                    <a href="../espaco/espaco/index.html" class="btn btn-dark w-100 p-3 fw-bold">Espaço</a>
+                    <a href="../espaco/index.html" class="btn btn-dark w-100 p-3 fw-bold">Espaço</a>
                 </div>
 
                 <div class="col-lg-4 col-md-6">
-                    <a href="../parceria/parceria/index.html" class="btn btn-dark w-100 p-3 fw-bold">Parceria</a>
+                    <a href="../parceria/index.html" class="btn btn-dark w-100 p-3 fw-bold">Parceria</a>
                 </div>
 
                 <div class="col-lg-4 col-md-6">
-                    <a href="../usuario/usuario/index.html" class="btn btn-dark w-100 p-3 fw-bold">Usuário</a>
+                    <a href="../usuario/index.html" class="btn btn-dark w-100 p-3 fw-bold">Usuário</a>
                 </div>
             </div>
         </div>
