--- a/views/avaliacao/atualizarAvaliacao.html
+++ b/views/avaliacao/atualizarAvaliacao.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="mb-4">
                         <label for="data_avaliacao" class="form-label">Data da Avaliação</label>
-                        <input type="datetime-local" class="form-control" id="data_avaliacao" name="data_avaliacao" required>
+                        <input type="date" class="form-control" id="data_avaliacao" name="data_avaliacao" required>
                     </div>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                         <button type="button" id="cancelar" class="btn btn-secondary">Cancelar</button>
@@ -78,7 +78,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="../../public/js/avaliacao/atualizar_avaliacao.js"></script>
+    <script src="../../public/js/avaliacao/atualizarAvaliacao.js"></script>
 </body>
 
 </html>
