--- a/views/avaliacao/novaAvaliacao.html
+++ b/views/avaliacao/novaAvaliacao.html
@@ -66,7 +66,7 @@
 
                     <div class="mb-4">
                         <label for="data_avaliacao" class="form-label">Data da Avaliação</label>
-                        <input type="datetime-local" class="form-control" id="data_avaliacao" name="data_avaliacao" required>
+                        <input type="date" class="form-control" id="data_avaliacao" name="data_avaliacao" required>
                     </div>
 
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
@@ -84,7 +84,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../../public/js/avaliacao/avaliacao_nova.js"></script>
+    <script src="../../public/js/avaliacao/novaAvaliacao.js"></script>
 </body>
 
 </html>
