--- a/views/home/index.html
+++ b/views/home/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="../../public/assets/css/style.css">
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -17,27 +18,26 @@
                 <a class="navbar-brand" href="#">Painel Admin</a>
                 <ul class="navbar-nav me-auto my-2 my-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="../index.html">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">-</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link active" href="../anuncio/index.html">Anúncio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="../avaliacao/index.html">Avaliações</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../espaco/espaco/index.html">Espaço</a>
+                        <a class="nav-link active" href="../espaco/index.html">Espaço</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../parceria/parceria/index.html">Parceria</a>
+                        <a class="nav-link active" href="../parceria/index.html">Parceria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../usuario/usuario/index.html">Usuário</a>
+                        <a class="nav-link active" href="../usuario/index.html">Usuário</a>
                     </li>
                 </ul>
+                <div class="area-usuario">
+                    <span id="mensagem-ola"></span>
+                </div>
+                <button id="botao-logoff" class="btn btn-outline-warning"> <i class="bi-box-arrow-right"></i> Sair
+                </button>
             </div>
         </nav>
     </header>
@@ -83,7 +83,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="../js/home.js"></script>
+
+    <script src="../../public/js/login/validaSessao.js"></script>
+    <script src="../../public/js/home/scriptHome.js"></script>
 </body>
 
 </html>
