--- a/views/avaliacao/novaAvaliacao.html
+++ b/views/avaliacao/novaAvaliacao.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +8,6 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 </head>
-
 <body class="d-flex flex-column min-vh-100 bg-light">
     <header>
         <nav class="navbar bg-dark navbar-expand-lg" data-bs-theme="dark">
@@ -39,10 +37,10 @@
                         </div>
                         <div class="col-md-4 mb-3">
                             <label for="id_avaliado" class="form-label">ID Avaliado</label>
-                            <input type="number" class="form-control" id="id_avaliado" name="id_avaliado" required>
+                            <input type="number" class="form-control" id="id_avaliado" name="id_avaliado" required> 
                         </div>
                         <div class="col-md-4 mb-3">
-                            <label for="id_parceria" class="form-label">ID Parceria</label>
+                            <label for="id_parceria" class="form-label">ID Parceria (Opcional)</label>
                             <input type="number" class="form-control" id="id_parceria" name="id_parceria">
                         </div>
                     </div>
@@ -71,7 +69,7 @@
 
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                         <a href="index.html" class="btn btn-secondary">Cancelar</a>
-                        <button type="button" id="enviar" class="btn btn-dark">Criar Avaliação</button>
+                        <button type="submit" id="enviar" class="btn btn-dark">Criar Avaliação</button>
                     </div>
                 </form>
             </div>
@@ -86,5 +84,4 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../../public/js/avaliacao/novaAvaliacao.js"></script>
 </body>
-
 </html>
