--- a/views/anuncio/atualizarAnuncio.html
+++ b/views/anuncio/atualizarAnuncio.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +8,6 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-
 <body class="d-flex flex-column min-vh-100 bg-light">
     <header>
         <nav class="navbar bg-dark navbar-expand-lg" data-bs-theme="dark">
@@ -30,11 +28,8 @@
         <div class="card shadow-sm" style="max-width: 700px; width: 100%;">
             <div class="card-body p-4">
                 <h2 class="card-title text-center mb-4">Atualizar Anúncio</h2>
+                
                 <form id="formAnuncio">
-                    <div class="mb-3">
-                        <label for="anunciante" class="form-label">Anunciante</label>
-                        <input type="text" class="form-control" id="anunciante" name="anunciante" required>
-                    </div>
                     <div class="mb-3">
                         <label for="titulo" class="form-label">Título do Anúncio</label>
                         <input type="text" class="form-control" id="titulo" name="titulo" required>
@@ -56,13 +51,10 @@
                             </select>
                         </div>
                     </div>
-                    <div class="mb-4">
-                        <label for="localizacao" class="form-label">Localização (Cidade/Bairro)</label>
-                        <input type="text" class="form-control" id="localizacao" name="localizacao">
-                    </div>
+
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                         <button type="button" id="cancelar" class="btn btn-secondary">Cancelar</button>
-                        <button type="button" id="salvar" class="btn btn-dark">Salvar Alterações</button>
+                        <button type="submit" id="salvar" class="btn btn-dark">Salvar Alterações</button>
                     </div>
                 </form>
             </div>
@@ -71,7 +63,6 @@
 
     <footer class="bg-dark text-white text-center p-2 mt-auto">
         <h6>&copy; Artur K; Eduardo F; João Victor R; Matthew M; Rafael S; Luiz D - 2025</h6>
-
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -79,5 +70,4 @@
         crossorigin="anonymous"></script>
     <script src="../../public/js/anuncio/atualizar_anuncio.js"></script>
 </body>
-
 </html>
