--- a/views/avaliacao/atualizarAvaliacao.html
+++ b/views/avaliacao/atualizarAvaliacao.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +8,6 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-
 <body class="d-flex flex-column min-vh-100 bg-light">
     <header>
         <nav class="navbar bg-dark navbar-expand-lg" data-bs-theme="dark">
@@ -40,7 +38,7 @@
                         <input type="number" class="form-control" id="id_avaliado" name="id_avaliado" required>
                     </div>
                     <div class="mb-3">
-                        <label for="id_parceria" class="form-label">ID Parceria</label>
+                        <label for="id_parceria" class="form-label">ID Parceria (Opcional)</label>
                         <input type="number" class="form-control" id="id_parceria" name="id_parceria">
                     </div>
                     <div class="mb-3">
@@ -64,7 +62,7 @@
                     </div>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                         <button type="button" id="cancelar" class="btn btn-secondary">Cancelar</button>
-                        <button type="button" id="salvar" class="btn btn-dark">Salvar Alterações</button>
+                        <button type="submit" id="salvar" class="btn btn-dark">Salvar Alterações</button>
                     </div>
                 </form>
             </div>
@@ -80,5 +78,4 @@
         crossorigin="anonymous"></script>
     <script src="../../public/js/avaliacao/atualizarAvaliacao.js"></script>
 </body>
-
 </html>
