--- a/views/login/index.html
+++ b/views/login/index.html
@@ -33,7 +33,8 @@
                     </div>
 
                     <div class="col-md-7">
-                        <div class="card-body p-4 p-md-5"> <form name="login" id="login" method="post">
+                        <div class="card-body p-4 p-md-5"> 
+                            <form name="login" id="formLogin" method="post">
                                 <h2 class="card-title text-center mb-4">Acessar Painel</h2>
 
                                 <div class="mb-3">
@@ -55,7 +56,7 @@
                                 </div>
 
                                 <div class="text-center mt-4">
-                                    <button id="entrar" type="button" class="btn btn-dark btn-lg">
+                                    <button id="entrar" type="submit" class="btn btn-dark btn-lg">
                                         <i class="bi bi-box-arrow-in-right"></i> Entrar
                                     </button>
                                 </div>
