finished everything, added help comments on all index.js files :)

--- a/views/avaliacao/index.html
+++ b/views/avaliacao/index.html
@@ -16,11 +16,21 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="../home/index.html">Painel Admin</a>
                 <ul class="navbar-nav me-auto my-2 my-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="../anuncio/index.html">Anúncio</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Avaliações</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../espaco/index.html">Espaço</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../parceria/parceria/index.html">Parceria</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../usuario/usuario/index.html">Usuário</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../anuncio/index.html">Anúncio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../avaliacao/index.html">Avaliações</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../espaco/index.html">Espaço</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../parceria/index.html">Parceria</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../usuario/index.html">Usuário</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -51,7 +61,6 @@
                             </tr>
                         </thead>
                         <tbody id="listaAvaliacoes">
-                            <!-- As avaliações serão preenchidas aqui via JavaScript -->
                         </tbody>
                     </table>
                 </div>
