--- a/views/espaco/atualizarEspaco.html
+++ b/views/espaco/atualizarEspaco.html
@@ -11,20 +11,31 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100 bg-light">
-    <header>
-        <nav class="navbar bg-dark navbar-expand-lg" data-bs-theme="dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../home/index.html">Painel Admin</a>
-                <ul class="navbar-nav me-auto my-2 my-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="../anuncio/index.html">Anúncio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../avaliacao/index.html">Avaliações</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Espaço</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../parceria/parceria/index.html">Parceria</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../usuario/usuario/index.html">Usuário</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+    <body class="d-flex flex-column min-vh-100">
+        <header>
+            <nav class="navbar bg-dark navbar-expand-lg" data-bs-theme="dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="../home/index.html">Painel Admin</a>
+                    <ul class="navbar-nav me-auto my-2 my-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../anuncio/index.html">Anúncio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../avaliacao/index.html">Avaliações</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../espaco/index.html">Espaço</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../parceria/index.html">Parceria</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../usuario/index.html">Usuário</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
 
     <main class="container d-flex justify-content-center align-items-center flex-grow-1 py-4">
         <div class="card shadow-sm" style="max-width: 700px; width: 100%;">
