--- a/views/anuncio/index.html
+++ b/views/anuncio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciar Anúncios</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
@@ -38,9 +38,16 @@
                 <div class="table-responsive">
                     <table class="table table-hover table-striped align-middle">
                         <thead>
-                            </thead>
+                            <tr>
+                                <th>Título</th>
+                                <th>Descrição</th>
+                                <th>Tipo</th>
+                                <th class="text-end">Preço (R$)</th>
+                                <th class="text-center">Ações</th>
+                            </tr>
+                        </thead>
                         <tbody id="listaAnuncios">
-                            </tbody>
+                        </tbody>
                     </table>
                 </div>
             </div>
@@ -48,10 +55,10 @@
     </main>
 
     <footer class="bg-dark text-white text-center p-2 mt-auto">
-                <h6>&copy; Artur K; Eduardo F; João Victor R; Matthew M; Rafael S; Luiz D  - 2025</h6>
+        <h6>&copy; Artur K; Eduardo F; João Victor R; Matthew M; Rafael S; Luiz D  - 2025</h6>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../../public/js/anuncio/index.js"></script>
 </body>
 </html>
