--- a/views/avaliacao/atualizarAvaliacao.html
+++ b/views/avaliacao/atualizarAvaliacao.html
@@ -9,21 +9,32 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body class="d-flex flex-column min-vh-100 bg-light">
-    <header>
-        <nav class="navbar bg-dark navbar-expand-lg" data-bs-theme="dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../home/index.html">Painel Admin</a>
-                <ul class="navbar-nav me-auto my-2 my-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="../anuncio/index.html">Anúncio</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="../index.html">Avaliações</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../espaco/index.html">Espaço</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../parceria/parceria/index.html">Parceria</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../usuario/usuario/index.html">Usuário</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-
+    <body class="d-flex flex-column min-vh-100">
+        <header>
+            <nav class="navbar bg-dark navbar-expand-lg" data-bs-theme="dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="../home/index.html">Painel Admin</a>
+                    <ul class="navbar-nav me-auto my-2 my-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../anuncio/index.html">Anúncio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../avaliacao/index.html">Avaliações</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../espaco/index.html">Espaço</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../parceria/index.html">Parceria</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../usuario/index.html">Usuário</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        
     <main class="container d-flex justify-content-center align-items-center flex-grow-1 py-4">
         <div class="card shadow-sm" style="max-width: 700px; width: 100%;">
             <div class="card-body p-4">
