--- a/views/home/index.html
+++ b/views/home/index.html
@@ -8,14 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../../public/assets/css/style.css">
+    <link rel="stylesheet" href="../../public/assets/img/css/style.css">
 </head>
 
 <body class="d-flex flex-column min-vh-100">
     <header>
         <nav class="navbar bg-dark navbar-expand-lg" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Painel Admin</a>
+                <a class="navbar-brand" href="../home/index.html">Painel Admin</a>
                 <ul class="navbar-nav me-auto my-2 my-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" href="../anuncio/index.html">Anúncio</a>
