--- a/views/login/index.html
+++ b/views/login/index.html
@@ -12,10 +12,22 @@
     <header>
         <nav class="navbar bg-dark navbar-expand-lg" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Painel Admin</a>
+                <a class="navbar-brand" href="../home/index.html">Painel Admin</a>
                 <ul class="navbar-nav me-auto my-2 my-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Login</a>
+                        <a class="nav-link active" href="../anuncio/index.html">Anúncio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../avaliacao/index.html">Avaliações</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../espaco/index.html">Espaço</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../parceria/index.html">Parceria</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../usuario/index.html">Usuário</a>
                     </li>
                 </ul>
             </div>
